fixed overflow issue while loading occurs

--- a/src/index.css
+++ b/src/index.css
@@ -775,7 +775,7 @@ h1 {
     width: 100vw;
     top: 0px;
     left: 0px;
-    overflow-y: hidden;
+    overflow: hidden;
     background-color: rgb(0, 0, 0);
     z-index: 9999;
 }
